; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_statem_dtls.c_dtls1_set_message_header_int.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_statem_dtls.c_dtls1_set_message_header_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.hm_header_st }
%struct.hm_header_st = type { i8, i64, i16, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i8, i64, i16, i64, i64)* @dtls1_set_message_header_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dtls1_set_message_header_int(%struct.TYPE_5__* %0, i8 zeroext %1, i64 %2, i16 zeroext %3, i64 %4, i64 %5) #0 {
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i8, align 1
  %9 = alloca i64, align 8
  %10 = alloca i16, align 2
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca %struct.hm_header_st*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %7, align 8
  store i8 %1, i8* %8, align 1
  store i64 %2, i64* %9, align 8
  store i16 %3, i16* %10, align 2
  store i64 %4, i64* %11, align 8
  store i64 %5, i64* %12, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  store %struct.hm_header_st* %17, %struct.hm_header_st** %13, align 8
  %18 = load i8, i8* %8, align 1
  %19 = load %struct.hm_header_st*, %struct.hm_header_st** %13, align 8
  %20 = getelementptr inbounds %struct.hm_header_st, %struct.hm_header_st* %19, i32 0, i32 0
  store i8 %18, i8* %20, align 8
  %21 = load i64, i64* %9, align 8
  %22 = load %struct.hm_header_st*, %struct.hm_header_st** %13, align 8
  %23 = getelementptr inbounds %struct.hm_header_st, %struct.hm_header_st* %22, i32 0, i32 1
  store i64 %21, i64* %23, align 8
  %24 = load i16, i16* %10, align 2
  %25 = load %struct.hm_header_st*, %struct.hm_header_st** %13, align 8
  %26 = getelementptr inbounds %struct.hm_header_st, %struct.hm_header_st* %25, i32 0, i32 2
  store i16 %24, i16* %26, align 8
  %27 = load i64, i64* %11, align 8
  %28 = load %struct.hm_header_st*, %struct.hm_header_st** %13, align 8
  %29 = getelementptr inbounds %struct.hm_header_st, %struct.hm_header_st* %28, i32 0, i32 3
  store i64 %27, i64* %29, align 8
  %30 = load i64, i64* %12, align 8
  %31 = load %struct.hm_header_st*, %struct.hm_header_st** %13, align 8
  %32 = getelementptr inbounds %struct.hm_header_st, %struct.hm_header_st* %31, i32 0, i32 4
  store i64 %30, i64* %32, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
